--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     url("../fonts/OpenSans-Bold.woff") format("woff"),
     url("../fonts/OpenSans-Bold.ttf") format("truetype");
     font-weight: 700;
-    /* font-style: normal; */
+    font-style: normal;
     /* font-display: swap; */
   }
 
@@ -14,7 +14,7 @@
     url("../fonts/OpenSans-Regular.woff") format("woff"),
     url("../fonts/OpenSans-Regular.ttf") format("truetype");
     font-weight: 400;
-    /* font-style: normal; */
+    font-style: normal;
     /* font-display: swap; */
   }
 
@@ -78,11 +78,14 @@ h5 {
     flex-wrap: wrap;
     padding-left: 15px;
     padding-right: 15px;
+    background-position-y: 1px;
+    background-position-x: center;
 }
 
 .header__title {
     text-align: center;
     font-weight: 700;
+    letter-spacing: 1.1px;
 }
 
 .head__nav {
@@ -627,11 +630,6 @@ sup {
 }
 
 /* --------- shop -----------*/
-/* .shop {
-    width: 1165px;
-    min-width: 897px;
-    margin: 60px auto 0px;
-} */
 
 .shop {
     /* padding-left: 6%;
@@ -825,6 +823,7 @@ sup {
     /*--------- page 1 part1: BANNER+LOGO+NAV+TITLE -- mobile ----*/
     .header-container {
         /* width: 360px; */
+        max-width: 100%;
         min-height: 640px;
         /* height: 640px; */
         margin: 0 auto 0 auto;
@@ -1241,8 +1240,10 @@ sup {
         width: 100%;
         /* max-width: 1200px; */
         /* height: 100%; */
-        min-height: 450px;
+        /* min-height: 450px; */
         margin: 0 auto;
+        padding-top: 28px;
+        padding-bottom: 130px;
         position: relative;
         text-align: center;
         background-image: url("../images/banner-bg.jpg");
