--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h5 {
 .header-content {
     position: relative;
     width: 100%;
-    max-height: 100%;
+    /* max-height: 100%; */
     margin: 0 auto 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -1320,7 +1320,7 @@ sup {
         /* padding-right: 18%;
         padding-left: 18%;
         padding-top: 6.5%; */
-        padding: 6.5% 18% 6.5% 18%;
+        padding: 3.5% 18% 3.5% 18%;
         text-align: center;
         font-size: x-large;
         /* font-size: 45px; */
